--- a/LaunchPadLabChallenge/public/style.css
+++ b/LaunchPadLabChallenge/public/style.css
@@ -8,59 +8,44 @@ body {
   padding: 0;
   margin: 0;
   width: 100vw;
-}
-
-#heading {
   text-align: center;
-  margin-top: 40px;
 }
 
 h1 {
-  font-size: 45px;
-}
-
-h2 {
-  font-size: 30px;
-}
-
-h3 {
-  font-size: 27px;
-}
-
-nav {
-  background-color: #333333;
-  color: #c0c0c0;
-  height: 45px;
-  padding: 10px;
-  font-size: 27px;
-  text-align: center;
-}
-
-nav a {
-  color: white;
-  margin: 10px 15px 10px 15px;
-}
-
-nav a:visited {
-  color: white;
-}
-
-nav a:hover {
-  color: rgb(200, 80, 204);
-}
-
-#table {
-  font-size: 50px;
-  text-align: center;
+  font-size: 40px;
 }
 
 table {
+  text-align: center;
   margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
+  border-spacing: 10px 5px;
 }
 
 td {
   background-color: white;
+  height: 60px;
+  width: 120px;
+  font-size: 18px;
 }
 
+.buttonCell {
+  background-color: rgb(232, 210, 235);
+  text-align: left;
+}
+
+button {
+  height: 45px;
+  width: 100px;
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: gray;
+  cursor: pointer;
+}
+
+.category {
+  font-size: 25px;
+}
